@@ -442,7 +442,7 @@ function print_input_file_progress($form_action, $into_form = '', $attr = '', $e
 		// defined button. If file upload is empty, the form is sended without it
 		if($button !== false) {
 			$output .= "$('.ax-uploadall').hide();";
-			$output .= "$('#$button').click(function() { $('.ax-uploadall').trigger('click');if($('.ax-file-name').html() == null)$('#form-add-file').submit();});";
+			$output .= "$('#$button').click(function() { $('.ax-uploadall').trigger('click');if($('.ax-file-name').html() == null)$('.upfile_form').submit();});";
 		}
 	$output .= "});";
 	$output .= "</script>";
